deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: roll-and-paper-bot
  namespace: roll-and-paper
spec:
  selector:
    app: roll-and-paper-bot
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
